Modify: Added changes

--- a/Create_dicom_groups_and_nifti_files.ipynb
+++ b/Create_dicom_groups_and_nifti_files.ipynb
@@ -1,27 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Create Dicom Group and convert into Nifti Files"
-      ],
       "metadata": {
         "id": "lzFsq1tP1d5s"
-      }
+      },
+      "source": [
+        "# Create Dicom Group and convert into Nifti Files"
+      ]
     },
     {
       "cell_type": "code",
@@ -43,18 +29,21 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "settings.validate_instance_number = False\n",
-        "slice_increment_inconsistent = False"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uCiLsUJW15AL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "settings.validate_instance_number = False\n",
+        "slice_increment_inconsistent = False"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BK-xEaJ51FlL"
+      },
       "source": [
         " ## Creating dicom folders\n",
         "\n",
@@ -66,13 +55,15 @@
         "\n",
         " `Number_slices`: number of slices that you need for your project and it will\n",
         "create groups with this number."
-      ],
-      "metadata": {
-        "id": "BK-xEaJ51FlL"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Y8wLYHBJHqgY"
+      },
+      "outputs": [],
       "source": [
         "def create_groups(in_dir, out_dir, number_slices):\n",
         "      for patient in glob(in_dir + '/*'):\n",
@@ -95,20 +86,20 @@
         "                    break\n",
         "\n",
         "                shutil.copy(file, output_path)"
-      ],
-      "metadata": {
-        "id": "Y8wLYHBJHqgY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wPUqGcItuVJ9"
+      },
+      "outputs": [],
       "source": [
         "import math\n",
         "\n",
-        "in_path_images =  \"/content/drive/Shareddrives/Spleen-Segmentation/Data/Images/\"\n",
-        "out_path_images = \"/content/drive/Shareddrives/Spleen-Segmentation/NewDicomFiles/Images\"\n",
+        "in_path_images =  \"/content/drive/Spleen-Segmentation/Data/Images/\"\n",
+        "out_path_images = \"/content/drive/Spleen-Segmentation/NewDicomFiles/Images\"\n",
         "\n",
         "\n",
         "for patient in glob(in_path_images+'/*'):\n",
@@ -129,25 +120,29 @@
         "            # print(output_path_name)\n",
         "            shutil.copy(file,str(output_path_name)+'/'+file_name)\n",
         "        print('\\n-------------------------------')"
-      ],
-      "metadata": {
-        "id": "wPUqGcItuVJ9"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Creation of dicom groups of fixed number of slices for images and labels\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I6b5VMQlJN1E"
+      },
+      "outputs": [],
       "source": [
-        "\n",
-        "# Creation of dicom groups of fixed number of slices for images and labels\n",
-        "\n",
         "# source folder containing dicom files for images and labels\n",
-        "dicom_files_image_path =  \"/content/drive/Shareddrives/Spleen-Segmentation/Data/Images/\"\n",
-        "dicom_files_label_path =  \"/content/drive/Shareddrives/Spleen-Segmentation/Data/Labels\"\n",
+        "dicom_files_image_path =  \"/content/drive/Spleen-Segmentation/Data/Images/\"\n",
+        "dicom_files_label_path =  \"/content/drive/Spleen-Segmentation/Data/Labels\"\n",
         "\n",
         "# destination folders to store dicom groups for images and labels\n",
-        "dicom_groups_image_path = \"/content/drive/Shareddrives/Spleen-Segmentation/DicomGroup/Images\"\n",
+        "dicom_groups_image_path = \"/content/drive/Spleen-Segmentation/DicomGroup/Images\"\n",
         "# dicom_groups_label_path = \"/content/drive/MyDrive/DicomGroup/Labels\"\n",
         "\n",
         "# create groups of image dicom files\n",
@@ -157,54 +152,52 @@
         "# create groups of label dicom files\n",
         "create_groups(dicom_files_label_path, dicom_groups_label_path, number_slices=40)\n",
         "print(\"Creating Dicom Groups from Label dicoms completed!!\\n\")"
-      ],
-      "metadata": {
-        "id": "I6b5VMQlJN1E"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "EzPNhruSJ_v1"
+      },
+      "outputs": [],
       "source": [
-        "in_path_images = '/content/drive/Shareddrives/Spleen-Segmentation/DicomGroup/Images/*'\n",
+        "in_path_images = '/content/drive/Spleen-Segmentation/DicomGroup/Images/*'\n",
         "# in_path_labels = 'C:/Users/Epoch/Downloads/Task09_Spleens/dicom_groups/Labels/*'\n",
-        "out_path_images = '/content/drive/Shareddrives/Spleen-Segmentation/nifti files/Images'\n",
+        "out_path_images = '/content/drive/Spleen-Segmentation/nifti files/Images'\n",
         "# out_path_labels = 'C:/Users/Epoch/Downloads/Task09_Spleens/nifti_files/Labels'\n",
         "\n",
         "list_images = glob(in_path_images)\n",
         "# list_labels = glob(in_path_labels)"
-      ],
-      "metadata": {
-        "id": "EzPNhruSJ_v1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SL1uJfaquPy1"
+      },
+      "outputs": [],
       "source": [
         "for patient in list_images:\n",
         "    patient_name = os.path.basename(os.path.normpath(patient))\n",
         "    dicom2nifti.dicom_series_to_nifti(patient, os.path.join(out_path_images, patient_name +'.nii.gz'))"
-      ],
-      "metadata": {
-        "id": "SL1uJfaquPy1"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "DlAvIDGsupkd"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3sDE6WJ-1sFc"
+      },
       "source": [
         "## Converting Dicom groups to nifties\n",
         "\n",
@@ -214,13 +207,15 @@
         "\n",
         "  `out_dir`: the path to the output where you want to save the converted nifties.\n",
         "  "
-      ],
-      "metadata": {
-        "id": "3sDE6WJ-1sFc"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FRzHZsze1s--"
+      },
+      "outputs": [],
       "source": [
         "def dcm2nifti(in_dir, out_dir):\n",
         "\n",
@@ -232,15 +227,15 @@
         "      dicom2nifti.dicom_series_to_nifti(folder, os.path.join(out_dir, patient_name + '.nii.gz'))\n",
         "\n",
         "      # dicom2nifti.convert_directory(folder, os.path.join(out_dir, patient_name + '.nii.gz'))`\n"
-      ],
-      "metadata": {
-        "id": "FRzHZsze1s--"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TdLyRa_N1-D2"
+      },
+      "outputs": [],
       "source": [
         "def rename_slices(in_dir):\n",
         "  for folder in tqdm(glob(in_dir + '/*')):\n",
@@ -252,46 +247,46 @@
         "      os.rename(src, dest)\n",
         "      i += 1\n",
         "      # print(src, dest)\n"
-      ],
-      "metadata": {
-        "id": "TdLyRa_N1-D2"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PcM_7Bk52ANj"
+      },
+      "outputs": [],
       "source": [
         "import dicom2nifti.settings as settings\n",
         "\n",
         "settings. disable_validate_sliceincrement()"
-      ],
-      "metadata": {
-        "id": "PcM_7Bk52ANj"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "vnvBWPiU2EQB"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Conversion of dicom groups to nifti format for images and labels\n"
-      ],
       "metadata": {
         "id": "Ot8W4c-q2EuH"
-      }
+      },
+      "source": [
+        "## Conversion of dicom groups to nifti format for images and labels\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_IAU3vHY2I6L"
+      },
+      "outputs": [],
       "source": [
         "# source folders of dicom groups for images and labels\n",
         "dicom_groups_image_path = \"/content/drive/MyDrive/DicomGroup/Images/\"\n",
@@ -303,12 +298,21 @@
         "\n",
         "dcm2nifti(dicom_groups_image_path, nifti_files_image_path)\n",
         "print(\"Conversion from Image Dicom Groups to Nifti files completed!!\\n\")"
-      ],
-      "metadata": {
-        "id": "_IAU3vHY2I6L"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
